@@ -3,6 +3,7 @@
     it will just print input as JSON ...
   * adding input print when creating dummy module to help
     users understand command line
+  * checking CK directory when updating kernel
 
 * V1.6.12
   * adding CK_PYTHON env variable in ck script 
